--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.3",
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
     "esbuild": "^0.20.1",
     "postcss": "^8.4.35",
+    "postcss-import": "^16.0.1",
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
