--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@hotwired/turbo-rails": "^8.0.3",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
-    "esbuild": "^0.20.1",
+    "esbuild": "@0.16.17",
     "postcss": "^8.4.35",
     "postcss-import": "^16.0.1",
     "tailwindcss": "^3.4.1"
