--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.3",
-    "stimulus": "npm:@hotwired/stimulus",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
     "esbuild": "@0.16.17",
+    "mrujs": "^1.0.0",
     "postcss": "^8.4.35",
     "postcss-import": "^16.0.1",
+    "stimulus": "npm:@hotwired/stimulus",
     "stimulus_reflex": "3.5.0-rc3",
     "tailwindcss": "^3.4.1"
   },
