--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "postcss-import": "^16.0.1",
     "stimulus": "npm:@hotwired/stimulus",
     "stimulus_reflex": "3.5.0-rc3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "cable_ready": "5.0.3",
+    "esbuild-rails": "^1.0.3"
   },
   "devDependencies": {
     "chokidar": "^3.6.0"
