--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "@hotwired/turbo-rails": "^8.0.3",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
+    "cable_ready": "5.0.3",
     "esbuild": "@0.16.17",
+    "esbuild-rails": "^1.0.3",
     "mrujs": "^1.0.0",
     "postcss": "^8.4.35",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.0.1",
+    "postcss-nested": "^6.0.1",
     "stimulus": "npm:@hotwired/stimulus",
     "stimulus_reflex": "3.5.0-rc3",
-    "tailwindcss": "^3.4.1",
-    "cable_ready": "5.0.3",
-    "esbuild-rails": "^1.0.3"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "chokidar": "^3.6.0"
